--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "tan-dataviz",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
@@ -16,6 +18,10 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "husky": "8.0.3",
+    "prettier": "2.8.7",
+    "sharp": "0.32.0",
+    "prettier-plugin-tailwindcss": "0.2.7"
   }
 }
