--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,14 @@
 {
-	"compilerOptions": {
-		"paths": {
-			"@/*": ["./src/*"]
-		}
-	}
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  }
 }
+
