--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
 	},
 	"dependencies": {
 		"autoprefixer": "10.4.14",
+		"copy-webpack-plugin": "11.0.0",
 		"eslint": "8.38.0",
 		"eslint-config-next": "13.3.0",
+		"husky": "8.0.3",
+		"leaflet": "1.9.3",
 		"next": "13.3.0",
 		"postcss": "8.4.21",
+		"prettier": "2.8.7",
+		"prettier-plugin-tailwindcss": "0.2.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"tailwindcss": "3.3.1",
-		"husky": "8.0.3",
-		"prettier": "2.8.7",
+		"react-icons": "4.7.1",
+		"react-leaflet": "4.2.1",
 		"sharp": "0.32.0",
-		"prettier-plugin-tailwindcss": "0.2.7"
+		"tailwindcss": "3.3.1"
 	}
 }
