--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": [
-        "src/components/*"
+        "src/Components/*"
       ],
       "@/*": [
         "./src/*"
